# RaftWebServer

./: CMakeLists.txt  LICENSE  README.md  TODO.md  library.json
components/RaftWebServer/: CMakeLists.txt  RaftClientConnBase.h  RaftClientConnNetconn.cpp  RaftClientConnNetconn.h  RaftClientConnSockets.cpp  RaftClientConnSockets.h  RaftClientListener.cpp  RaftClientListener.h  RaftWebConnDefs.h  RaftWebConnManager.cpp  RaftWebConnManager.h  RaftWebConnManagerEspIdf.cpp  RaftWebConnManagerEspIdf.h  RaftWebConnection.cpp  RaftWebConnection.h  RaftWebDataFrame.h  RaftWebHandler.h  RaftWebHandlerRestAPI.cpp  RaftWebHandlerRestAPI.h  RaftWebHandlerSSEvents.h  RaftWebHandlerStaticData.h  RaftWebHandlerStaticFiles.cpp  RaftWebHandlerStaticFiles.h  RaftWebHandlerWS.cpp  RaftWebHandlerWS.h  RaftWebInterface.cpp  RaftWebInterface.h  RaftWebMultipart.cpp  RaftWebMultipart.h  RaftWebRequestHeader.h  RaftWebRequestParams.h  RaftWebResponder.h  RaftWebResponderData.h  RaftWebResponderFile.cpp  RaftWebResponderFile.h  RaftWebResponderRestAPI.cpp  RaftWebResponderRestAPI.h  RaftWebResponderSSEvents.cpp  RaftWebResponderSSEvents.h  RaftWebResponderWS.cpp  (+8 more)
components/RaftWebServer/espidf/: RaftWebConnManager_espidf.cpp  RaftWebConnManager_espidf.h
components/RaftWebServer/mongoose/: CMakeLists.txt  MongooseMultipartState.h  RaftWebConnManager_mongoose.cpp  RaftWebConnManager_mongoose.h
components/RaftWebServer/original/: RaftClientConnBase.h  RaftClientConnNetconn.cpp  RaftClientConnNetconn.h  RaftClientConnSockets.cpp  RaftClientConnSockets.h  RaftClientListener.cpp  RaftWebConnDefs.h  RaftWebConnManager_original.cpp  RaftWebConnManager_original.h  RaftWebConnection.cpp  RaftWebConnection.h  RaftWebDataFrame.h  RaftWebInterface.h  RaftWebMultipart.cpp  RaftWebRequestHeader.h  RaftWebRequestParams.h  RaftWebResponder.h  RaftWebResponderData.h  RaftWebResponderFile.cpp  RaftWebResponderFile.h  RaftWebResponderRestAPI.cpp  RaftWebResponderRestAPI.h  RaftWebResponderSSEvents.cpp  RaftWebResponderSSEvents.h  RaftWebResponderWS.cpp  RaftWebResponderWS.h  RaftWebSSEvent.h  RaftWebSocketLink.cpp  RaftWebSocketLink.h
components/WebServer/: RegisterWebServer.h  RegisterWebServerSysMod.h  WebServer.cpp  WebServer.h  WebServerResource.h
default_certs/: server.csr  server_cert.pem  server_key.pem
examples/: .gitignore
examples/basic/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.defaults  test.py
examples/basic/main/: CMakeLists.txt  main.cpp
examples/basic/systypes/BasicWebServer/: SysTypes.json  features.cmake  sdkconfig.defaults
examples/perftest/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.defaults  test.py
examples/perftest/fsimage/: index.html  main.css  main.js  test_page_2_files.html  test_page_ws.html
examples/perftest/main/: CMakeLists.txt  main.cpp
examples/perftest/systypes/PerftestWebServer/: SysTypes.json  features.cmake  partitions.csv  sdkconfig.defaults
examples/perftest/systypes/PerftestWebServer/FSImage/: main.js  test.css  test_page_1_file.html  test_page_3_files.html
src/: RaftClientConnESP8266.cpp  RaftClientConnESP8266.h  RaftClientConnNetconn.cpp  RaftClientConnSockets.cpp  RaftClientListener.cpp  RaftClientListener.h  RaftWebConnDefs.h  RaftWebConnManager.cpp  RaftWebConnection.h  RaftWebHandler.h  RaftWebInterface.cpp  RaftWebInterface.h  RaftWebMultipart.h  RaftWebResponderFile.cpp  RaftWebResponderFile.h  RaftWebResponderRestAPI.cpp  RaftWebResponderRestAPI.h  RaftWebServer.cpp  RaftWebServer.h  RaftWebServerSettings.h  RaftWebSocketDefs.h  RaftWebSocketLink.cpp  RdClientConnBase.h  RdClientConnESP8266.cpp  RdClientConnESP8266.h  RdClientConnNetconn.cpp  RdClientConnNetconn.h  RdClientConnSockets.cpp  RdClientConnSockets.h  RdClientListener.cpp  RdClientListener.h  RdWebConnDefs.h  RdWebConnManager.cpp  RdWebConnManager.h  RdWebConnection.cpp  RdWebConnection.h  RdWebDataFrame.h  RdWebHandler.h  RdWebHandlerRestAPI.h  RdWebHandlerSSEvents.h  (+24 more)
